--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,22 @@
     
     <!-- Primary Meta Tags -->
     <title>Wisha - Gifting made easier</title>
-    <meta name="title" content="GenZtechies - Connecting Teen Techies Across Nigeria">
-    <meta name="description" content="Connecting Teen Techies Across Nigeria">
+    <meta name="title" content="Wisha - Gifting made easier">
+    <meta name="description" content="Gifting made easier">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://genztechies.com/">
-    <meta property="og:title" content="GenZtechies - Connecting Teen Techies Across Nigeria">
-    <meta property="og:description" content="Connecting Teen Techies Across Nigeria">
-    <meta property="og:image" content="https://genztechies.com/assets/site-preview.png">
+    <meta property="og:url" content="https://wishaa.herokuapp.com/">
+    <meta property="og:title" content="Wisha - Gifting made easier">
+    <meta property="og:description" content="Gifting made easier">
+    <meta property="og:image" content="https://wishaa.herokuapp.com/wishapreview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://genztechies.com/">
-    <meta property="twitter:title" content="GenZtechies - Connecting Teen Techies Across Nigeria">
-    <meta property="twitter:description" content="Connecting Teen Techies Across Nigeria">
-    <meta property="twitter:image" content="https://genztechies.com/assets/site-preview.png">
+    <meta property="twitter:url" content="https://wishaa.herokuapp.com/">
+    <meta property="twitter:title" content="Wisha - Gifting made easier">
+    <meta property="twitter:description" content="Gifting made easier">
+    <meta property="twitter:image" content="https://wishaa.herokuapp.com/wishapreview.png">
 
     <!--
       manifest.json provides metadata used when your web app is added to the
