--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://wishaa.herokuapp.com/">
+    <meta property="og:url" content="https://iamronaldosunmu.github.io/Wisha">
     <meta property="og:title" content="Wisha - Gifting made easier">
     <meta property="og:description" content="Gifting made easier">
-    <meta property="og:image" content="https://wishaa.herokuapp.com/wishapreview.png">
+    <meta property="og:image" content="%PUBLIC_URL%/wishapreview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://wishaa.herokuapp.com/">
+    <meta property="twitter:url" content="https://iamronaldosunmu.github.io/Wisha">
     <meta property="twitter:title" content="Wisha - Gifting made easier">
     <meta property="twitter:description" content="Gifting made easier">
-    <meta property="twitter:image" content="https://wishaa.herokuapp.com/wishapreview.png">
+    <meta property="twitter:image" content="%PUBLIC_URL%/wishapreview.png">
 
     <!--
       manifest.json provides metadata used when your web app is added to the
